feat: initial Home design

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
+@import "constants.css";
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  font-family: var(--font-family);
+  background: var(--bg-100);
+  min-height: 100dvh;
 }
