Feature: homepage background video

--- a/client/src/components/Button.css
+++ b/client/src/components/Button.css
@@ -1,5 +1,6 @@
 @import "../constants.css";
 .btnRoom {
+  padding: 20px 15px;
   color: var(--accent-200);
   border: 1px solid var(--accent-100);
   background: var(--primary-100);
