--- a/client/src/constants.css
+++ b/client/src/constants.css
@@ -7,6 +7,7 @@
   --accent-200: #8f001a;
   --text-100: #4d4d4d;
   --text-200: #797979;
+  --text-300: #ffffff;
   --bg-100: #f5ecec;
   --bg-200: #ebe2e2;
   --bg-300: #c2baba;
